--- a/src/gui/AdminScreen.fxml
+++ b/src/gui/AdminScreen.fxml
@@ -27,9 +27,9 @@
                         <Insets bottom="40.0" />
                      </VBox.margin>
                      <children>
-                        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" spacing="25.0" HBox.hgrow="ALWAYS">
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="40.0" right="20.0" top="60.0" />
                            </HBox.margin>
                         </HBox>
                         <VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="290.0">
