--- a/src/gui/AdminScreen.fxml
+++ b/src/gui/AdminScreen.fxml
@@ -27,15 +27,26 @@
                         <Insets top="40.0" />
                      </VBox.margin>
                   </Label>
+                  <HBox alignment="BOTTOM_LEFT" prefHeight="58.0" prefWidth="1366.0">
+                     <children>
+                        <Circle fx:id="btRefresh" fill="DODGERBLUE" radius="17.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="60.0" right="60.0" top="5.0" />
+                     </VBox.margin>
+                  </HBox>
                   <HBox alignment="BOTTOM_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="534.0" prefWidth="674.0" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="40.0" />
                      </VBox.margin>
                      <children>
-                        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" spacing="25.0" HBox.hgrow="ALWAYS">
+                        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" spacing="25.0" style="-fx-border-color: white; -fx-border-radius: 20 20 20 20;" HBox.hgrow="ALWAYS">
                            <HBox.margin>
-                              <Insets left="40.0" right="20.0" top="60.0" />
+                              <Insets left="40.0" right="20.0" />
                            </HBox.margin>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                         </HBox>
                         <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
@@ -65,7 +76,7 @@
                                           <TableView fx:id="tableSong" focusTraversable="false" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="128.0" prefWidth="250.0" style="-fx-background-color: #383838; -fx-background-radius: 0 0 20 20;" stylesheets="@../css/tableviewstyle.css" VBox.vgrow="ALWAYS">
                                             <columns>
                                               <TableColumn fx:id="columnItem" editable="false" prefWidth="152.0" resizable="false" />
-                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="76.0" resizable="false" />
+                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="64.0" resizable="false" />
                                             </columns>
                                              <VBox.margin>
                                                 <Insets left="20.0" right="20.0" />
