--- a/src/gui/AdminScreen.fxml
+++ b/src/gui/AdminScreen.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
@@ -40,14 +41,14 @@
                         <Insets bottom="40.0" />
                      </VBox.margin>
                      <children>
-                        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" spacing="25.0" style="-fx-border-color: white; -fx-border-radius: 20 20 20 20;" HBox.hgrow="ALWAYS">
+                        <TilePane fx:id="tilePane" alignment="TOP_CENTER" hgap="25.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: white; -fx-border-radius: 20;" vgap="25.0" HBox.hgrow="ALWAYS">
                            <HBox.margin>
                               <Insets left="40.0" right="20.0" />
                            </HBox.margin>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
-                        </HBox>
+                        </TilePane>
                         <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="270.0" spacing="15.0" VBox.vgrow="ALWAYS">
@@ -60,23 +61,23 @@
                                                 <Circle fx:id="btPause" fill="DODGERBLUE" radius="17.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
                                              </children>
                                           </HBox>
-                                          <Slider fx:id="volume" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="151.0" stylesheets="@../css/slider.css" value="50.0" />
+                                          <Slider fx:id="volume" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="151.0" stylesheets="@../css/slider.css" value="50.0" />
                                        </children>
                                     </VBox>
                                     <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
                                        <children>
-                                          <ChoiceBox fx:id="choiceSong" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="250.0" style="-fx-background-color: #383838; -fx-background-radius: 20 20 0 0;">
+                                          <ComboBox fx:id="choiceSong" focusTraversable="false" prefHeight="37.0" prefWidth="250.0" style="-fx-background-color: #383838; -fx-background-radius: 20 20 0 0;" stylesheets="@../css/combobox.css">
                                              <VBox.margin>
                                                 <Insets left="20.0" right="20.0" />
                                              </VBox.margin>
                                              <padding>
-                                                <Insets left="10.0" right="10.0" />
+                                                <Insets left="10.0" right="10.0" top="10.0" />
                                              </padding>
-                                          </ChoiceBox>
+                                          </ComboBox>
                                           <TableView fx:id="tableSong" focusTraversable="false" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="128.0" prefWidth="250.0" style="-fx-background-color: #383838; -fx-background-radius: 0 0 20 20;" stylesheets="@../css/tableviewstyle.css" VBox.vgrow="ALWAYS">
                                             <columns>
-                                              <TableColumn fx:id="columnItem" editable="false" prefWidth="152.0" resizable="false" />
-                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="64.0" resizable="false" />
+                                              <TableColumn fx:id="columnItem" editable="false" prefWidth="162.0" resizable="false" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" />
+                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="54.0" resizable="false" />
                                             </columns>
                                              <VBox.margin>
                                                 <Insets left="20.0" right="20.0" />
@@ -91,7 +92,7 @@
                               </VBox>
                               <VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="290.0">
                                  <children>
-                                    <ListView fx:id="listView" focusTraversable="false" prefHeight="238.0" prefWidth="224.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838 #383838;" stylesheets="@../css/listview.css">
+                                    <ListView fx:id="listView" focusTraversable="false" prefHeight="238.0" prefWidth="224.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838;" stylesheets="@../css/listview.css">
                                        <VBox.margin>
                                           <Insets left="20.0" right="20.0" top="20.0" />
                                        </VBox.margin>
