--- a/src/gui/AdminScreen.fxml
+++ b/src/gui/AdminScreen.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
@@ -67,11 +66,7 @@
                                           </VBox>
                                        </children>
                                     </VBox>
-                                    <ImageView fx:id="imgView" fitHeight="348.0" fitWidth="625.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../Pictures/dc6du5w-92b68c4d-c41c-44f2-9cdf-38ca4d895c99.jpg" />
-                                       </image>
-                                    </ImageView>
+                                    <ImageView fx:id="imgView" fitHeight="348.0" fitWidth="625.0" pickOnBounds="true" preserveRatio="true" />
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
