--- a/src/gui/AdminScreen.fxml
+++ b/src/gui/AdminScreen.fxml
@@ -48,7 +48,7 @@
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </HBox.margin>
                                     </VBox>
-                                    <VBox prefHeight="348.0" prefWidth="181.0" style="-fx-background-color: #383838; -fx-background-radius: 20;">
+                                    <VBox prefHeight="348.0" prefWidth="220.0" style="-fx-background-color: #383838; -fx-background-radius: 20;">
                                        <children>
                                           <VBox prefHeight="26.0" prefWidth="161.0">
                                              <VBox.margin>
@@ -64,6 +64,21 @@
                                                 </Button>
                                              </children>
                                           </VBox>
+                                          <Label text="Playlist" textFill="WHITE">
+                                             <VBox.margin>
+                                                <Insets left="10.0" top="10.0" />
+                                             </VBox.margin>
+                                          </Label>
+                                          <TableView fx:id="tablePlaylist" prefHeight="200.0" prefWidth="200.0" stylesheets="@../css/tableviewstyle.css" VBox.vgrow="ALWAYS">
+                                            <columns>
+                                              <TableColumn fx:id="playlistName" editable="false" prefWidth="101.0" sortable="false" />
+                                              <TableColumn fx:id="playlistBtRem" editable="false" prefWidth="34.0" sortable="false" />
+                                                <TableColumn fx:id="playlistBtPlay" editable="false" prefWidth="53.0" sortable="false" />
+                                            </columns>
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" />
+                                             </VBox.margin>
+                                          </TableView>
                                        </children>
                                     </VBox>
                                     <ImageView fx:id="imgView" fitHeight="348.0" fitWidth="625.0" pickOnBounds="true" preserveRatio="true" />
@@ -104,8 +119,9 @@
                                           </ComboBox>
                                           <TableView fx:id="tableSong" focusTraversable="false" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="128.0" prefWidth="250.0" style="-fx-background-color: #383838; -fx-background-radius: 0 0 20 20;" stylesheets="@../css/tableviewstyle.css" VBox.vgrow="ALWAYS">
                                             <columns>
-                                              <TableColumn fx:id="columnItem" editable="false" prefWidth="162.0" resizable="false" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" />
-                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="54.0" resizable="false" />
+                                              <TableColumn fx:id="columnItem" editable="false" prefWidth="125.0" resizable="false" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" />
+                                                <TableColumn fx:id="columnPlaylist" prefWidth="40.0" />
+                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="55.0" resizable="false" />
                                             </columns>
                                              <VBox.margin>
                                                 <Insets left="20.0" right="20.0" />
